[package]
name = "key-server-fake"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4"
http = { version = "0.2" }
httparse= { version = "1.5" }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
rustls = "0.19.0"
mio = { version = "0.6" }
webpki = "0.22"
lazy_static = "1.4.0"
log = "0.4.14"
env_logger = "0.9.0"

[features]
default = ["normal"]
normal = []
nitro_enclave = []